--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         
         <nav id="menu">
         	<ul id="menu-nav">
-            	<li class="current"><a href="#home-slider">Acceuil</a></li>
+            	<li class="current"><a href="#home-slider">Accueil</a></li>
                 <li><a href="https://www.cevennstar.fr/index.html#labrasserie">La brasserie</a></li>
                 <li><a href="https://www.cevennstar.fr/index.html#lesbieres">Les bières</a></li>
 				
