--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                     <h2 class="title">Les bières CévennStar</h2>
                     <h3 class="title-description">Découvrez notre production locale en 33cl et 75cl</h3>
                      <div class="span12">
-                        <h4><img src="_include/img/medal_2023_or.png" alt="Medaille d'or">   Médaille d'or 2023 pour l'Impérial Oatmeal Stout IPA aux piments bio des Cévennes.</h4>
-                        <h4><img src="_include/img/medal_2023_argent.png" alt="Medaille d'argent">   Médaille d'argent 2023 pour la Sour Framboise.</h4>
+                        <h5><img src="_include/img/medal_2023_or.png" alt="Medaille d'or">Médaille d'or 2023 pour l'Impérial Oatmeal Stout IPA aux piments bio des Cévennes - <b> Meilleure bière française de la compétition</b></h5>
+                        <h5><img src="_include/img/medal_2023_argent.png" alt="Medaille d'argent">   Médaille d'argent 2023 pour la Sour Framboise.</h5>
                      </div>
                 </div>
             </div>
